--- a/styles.css
+++ b/styles.css
@@ -120,7 +120,7 @@ body {
 }
 
 .smallModal {
-    display: block;
+    display:none;
     width: 100vw;
     height: 100vh;
     background-color: rgb(0, 0, 0);
@@ -131,10 +131,11 @@ body {
 
 .smallModal p {
     text-align: center;
-    margin-top: 50%;
-    margin: 50% auto;
     padding: 0 5%;
     font-size: 2em;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
 }
 
 .expand2{
