--- a/styles.css
+++ b/styles.css
@@ -120,7 +120,7 @@ body {
 }
 
 .smallModal {
-    display:none;
+    display:block;
     width: 100vw;
     height: 100vh;
     background-color: rgb(0, 0, 0);
