--- a/styles.css
+++ b/styles.css
@@ -97,6 +97,10 @@ body {
     width: 50%;
     height: 50%;
     -webkit-transform: skew(0deg) scale(0);
+    -moz-transform: skew(0deg) scale(0);
+    -ms-transform: skew(0deg) scale(0);
+    -o-transform: skew(0deg) scale(0);
+    transform: skew(0deg) scale(0);
     position: absolute;
     transition: 2s;
     top: 39%;
@@ -110,6 +114,11 @@ body {
     height: 50%;
     position: absolute;
     -webkit-transform: skew(0deg) scale(0);
+    -moz-transform: skew(0deg) scale(0);
+    -ms-transform: skew(0deg) scale(0);
+    -o-transform: skew(0deg) scale(0);
+    transform: skew(0deg) scale(0);
+    
     transition: 2s;
     top: 39%;
     left: 3%;
@@ -117,11 +126,19 @@ body {
 }
 
 .expand2{
-    -webkit-transform: skew(45deg) scale(1);
+    -webkit-transform: skew(45deg scale(1));
+    -moz-transform: skew(45deg scale(1));
+    -ms-transform: skew(45deg scale(1));
+    -o-transform: skew(45deg scale(1));
+    transform: skew(45deg scale(1));
 }
 
 .expand1 {
     -webkit-transform: skew(-45deg) scale(1);
+    -moz-transform: skew(-45deg) scale(1);
+    -ms-transform: skew(-45deg) scale(1);
+    -o-transform: skew(-45deg) scale(1);
+    transform: skew(-45deg) scale(1);
 }
 
 /* O animation */
@@ -140,13 +157,31 @@ body {
     width: 50px;
     border-radius: 50%;
     transition: 2s;
+    -webkit-transition: 2s ;
+    -moz-transition: 2s;
+    -ms-transition: 2s;
+    -o-transition: 2s;
+    transition: 2s;
     -webkit-transform: scale(0) rotateY(0deg);
+    -moz-transform: scale(0) rotateY(0deg);
+    -ms-transform: scale(0) rotateY(0deg);
+    -o-transform: scale(0) rotateY(0deg);
+    transform: scale(0) rotateY(0deg);
     left: 50%;
     transform: translate(-50%, 50%) !important;
+    -webkit-transition: translate(-50%, 50%);
+    -moz-transition:  translate(-50%, 50%);
+    -ms-transition:  translate(-50%, 50%);
+    -o-transition:  translate(-50%, 50%);
+    transition:  translate(-50%, 50%);
 }
 
 .expandCircle {
     -webkit-transform: scale(1) rotateY(360deg);
+    -moz-transform: scale(1) rotateY(360deg);
+    -ms-transform: scale(1) rotateY(360deg);
+    -o-transform: scale(1) rotateY(360deg);
+    transform: scale(1) rotateY(360deg);
 }
 
 /* Gun/Pointer */
@@ -157,7 +192,11 @@ body {
     left: 8%;
     top: 0;
     -webkit-transform: rotateX(50deg);
-    -webkit-transform-origin: 50% 100%;
+    -moz-transform: rotateX(50deg);
+    -ms-transform: rotateX(50deg);
+    -o-transform: rotateX(50deg);
+    transform: rotateX(50deg);
+    transform-origin: 50% 100%;
 }
 #pointer-wrap img {
     width: 100%;
@@ -253,6 +292,10 @@ button{
         position: absolute;
         top: 29%;
         left: 20%;
+        -webkit-transform: rotateY(30deg);
+        -moz-transform: rotateY(30deg);
+        -ms-transform: rotateY(30deg);
+        -o-transform: rotateY(30deg);
         transform: rotateY(30deg);
     }
     .reset{
@@ -264,6 +307,10 @@ button{
         position: absolute;
         top: 23%;
         left: 50%;
+        -webkit-transform: rotateY(30deg);
+        -moz-transform: rotateY(30deg);
+        -ms-transform: rotateY(30deg);
+        -o-transform: rotateY(30deg);
         transform: rotateY(30deg);
         font-size: 200%;
         border: none;
